0.8

- Removed our own unsubscribe link, we'll just rely on messagepub's link
- Changed sending to be more compatible with messagepub's rate limiting
- Fixed a warning in db_shift()

0.7

- Fixed a bug causing the unsubscribe line to use the wrong email

0.6

- Added pager to messages, subscribers
- Added alternating colours for easier browsing
- Added subscriber export
- Added logout link