@@ -8,3 +8,8 @@ This software is licensed under the Creative Commons Attribution-Share Alike
 license:
 
 http://creativecommons.org/licenses/by-sa/2.5/ca/
+
+Mailbox icon is licensed under the Creative Commons Attribution-Noncommercial
+license, by iconspedia.com:
+
+http://www.iconspedia.com/icon/mailbox-1307.html
