@@ -1,5 +1,5 @@
 body {
-	background: #ddd;
+	background: #f5f5f5;
 	color: #222;
 	font-family: Helvetica, Arial, sans-serif;
 	font-size: 12px;
@@ -12,7 +12,7 @@ td, th {
 }
 
 tr.even {
-	background-color: #eee;
+	background-color: #f5f5f5;
 }
 
 div#wrapper {
@@ -23,17 +23,20 @@ div#wrapper {
 }
 
 h1#title {
-	font-size: 17px;
-	text-transform: uppercase;
-	margin-bottom: 0px;
-	padding-left: 2px;
+	font-size: 24px;
+	letter-spacing: 1px;
+	margin-bottom: 5px;
+	padding-left: 50px;
+	background-image:url(mailbox1_is-48.png);
+	background-repeat: no-repeat;
+	background-position: 2px 50%;
 }
 
 div#content {
 	width: 100%;
 	min-height: 200px;
 	border: 1px solid #aaa;
-	background: #f5f5f5;
+	background: #fefefe;
 	padding: 10px 20px 15px 20px;
 	margin-bottom: 0px;
 }
@@ -50,6 +53,18 @@ textarea.body {
 	width: 700px;
 	font-family: monospace;
 	font-size: 12px;
+}
+
+a {
+	color: #0D3D7F;
+}
+
+a:visited {
+	color: #0D3D7F;
+}
+
+a:hover {
+	color: #71A106;
 }
 
 #nav {
