@@ -1,5 +1,5 @@
 body {
-	background: #ddd;
+	background: #f5f5f5;
 	color: #222;
 	font-family: Helvetica, Arial, sans-serif;
 	font-size: 12px;
@@ -12,6 +12,6 @@ div#content {
 	margin-right: auto;
 	margin-top: 100px;
 	border: 1px solid #aaa;
-	background: #f5f5f5;
+	background: #fefefe;
 	padding: 20px;
 }
